# wanted_test

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  company.sqlite  pyproject.toml  run.py  test.sqlite
app/: components.py  config.py  exception.py  orm.py  wsgi.py
app/migration/versions/: 3c69d237063b_add_company_name.py  542549e8c9a7_add_commpany.py  fd9c851742b2_add_company_tag.py
app/model/: company.py
app/repository/: commany.py
app/resource/: company.py
app/schema/: company.py
app/service/: company.py
app/service/dto/: company.py
docs/: apispec.json  index.html
tests/: conftest.py  test_senior_app.py
