[tool.poetry]
name = "wanted_test"
version = "0.1.0"
description = ""
authors = ["dooyeoung <dooyeoung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-smorest = "^0.39.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
SQLAlchemy-Utc = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
